--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,13 @@
     width: 60%;
     margin-left: 20%;
 }
+
+.main-menu-button{
+    margin-top: 5px;
+}
+.next-button{
+    margin-top: 5px;
+}
+.task-text{
+    margin-left: 21px;
+}
