--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     box-shadow: 0 3px 13px 0 rgba(14,9,73,.2), 0 11px 21px 0 rgba(255,166,220,.004);
     margin-left: 1px;
     margin-right: 1px;
+    margin-bottom: 3%;
 }
 .block{
     border-top-left-radius: 10px;
@@ -43,12 +44,13 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background-size: 100%;
-    min-height: 12vh;
     width: 60%;
     margin-left: 20%;
     background-color: #ececec;
     padding-top: 1.75%;
     border: 1px solid #7d7d7d;
+    overflow: hidden;
+    transition: max-height 0.4s ease-out;
 }
 h1{
     color: #f7f7f7;
