--- a/css/styles.css
+++ b/css/styles.css
@@ -11,30 +11,30 @@
     text-align: center;
     /* width: 100px; */
     cursor: pointer;
-    padding: 15px 20px;
+    padding: 4px 20px;
     /* background: red; */
     display: inline-block;
-    border-radius: 6px;
-    border-color: #cacaca;
-    font-size: 24px;
+    border-radius: 30px;
+    border-color: #C6C6C6;
+    font-size: 60px;
     text-transform: uppercase;
     color: #FFF!important;
     background-image: -moz-linear-gradient(-45deg,#f761a1 0,#8c1bab 100%);
-    background-image: -webkit-linear-gradient(-45deg,#f1f1f1 0,#adadad 100%);
+    background-image: -webkit-linear-gradient(-45deg,#C6C6C6 0,#C6C6C6 100%);
     background-image: -ms-linear-gradient(-45deg,#f761a1 0,#8c1bab 100%);
-    box-shadow: 0 3px 13px 0 rgba(14,9,73,.2), 0 11px 21px 0 rgba(255,166,220,.004);
-    margin-left: 1px;
-    margin-right: 1px;
+    box-shadow: 0 4px 13px 0 rgba(14,9,73,.2), 0 11px 21px 0 rgba(255,166,220,.004);
+    margin-left: 15px;
+    margin-right: 15px;
     margin-bottom: 3%;
 }
 .block{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     background-size: 100%;
     background-color: black;
     min-height: 15vh;
     width: 60%;
-    margin-left: 20%;
+    margin-left: 21%;
     padding-top: 4vh;
     text-transform: uppercase;
 
@@ -45,10 +45,10 @@
     border-bottom-right-radius: 10px;
     background-size: 100%;
     width: 60%;
-    margin-left: 20%;
+    margin-left: 21%;
     background-color: #ececec;
     padding-top: 1.75%;
-    border: 1px solid #7d7d7d;
+    border: 1px solid #ececec;
     overflow: hidden;
     transition: max-height 0.4s ease-out;
 }
