--- a/css/styles2.css
+++ b/css/styles2.css
@@ -99,3 +99,22 @@
     color: deepskyblue;
     font-weight: bold;
 }
+
+.task {
+    text-align: center;
+    font-size: 19px;
+    margin-bottom: 1vh;
+}
+.text{
+    overflow: scroll;
+    color: #000;
+    width: 835px;
+    height: 300px;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 1.3em;
+}
+
+ol {
+    list-style-type: upper-alpha;
+}
