--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,98 +1,122 @@
-.content{
-    width: 85%;
+html{
+    scroll-behavior:smooth;
+}
+body{
+    margin: 0px;
+    background-color: #711840;
+}
+.mainblock{
+    background: linear-gradient(to left, #3d4d89 0%,#4d67ac 30%,#4d67ac 70%,#3d4d89 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */;
+    width: 100%;
+}
+
+.topblock{
+    display: flex;
+    padding-top: 0.5vh;
+    width: 100%;
+    justify-content: center;
 }
 .logo{
-    margin-left: 8px;
-    margin-top: 5px;
+    display: inline-block;
 }
-.main-menu-button{
-    margin-right: 2px;
-    margin-left: 2px;
+.menu{
+    display: inline-block;
+    margin-left: 30px;
+    margin-top: 40px;
 }
-
-
-.icon_select_mate {
-    position: absolute;
-    top: 0.2vh;
-    right: 2%;
-    font-size: 16px;
-    height: 22px;
-    transition: all 275ms;
+.menu a{
+    font-family: "Roboto Black";
+    color: white;
+    text-decoration: none;
+    font-size: 30px;
+    margin-left: 0.5VW;
+    padding: 5px 10px 5px 10px;
 }
-
-.select_mate {
+.menu a:hover{
+    padding: 0px 5px 0px 5px;
+    font-family: "Roboto Black";
+    color: white;
+    text-decoration: none;
+    font-size: 30px;
+    margin-left: 0.5VW;
+    border: 5px solid transparent;
+    border-radius: 20px;
+    border-color: #c5a2de;
+}
+.content {
     position: relative;
-    float: left;
-    width: 7vw;
-    height: 3vh;
-    color: #777;
-    background-color: #fff;
-    box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.3);
-    border-radius: 3px;
-    transition: all 375ms ease-in-out;
-    /* Oculto el elemento select */
+    background-color: #711840;
+    min-height: 65vh;
 }
-.select_mate select {
-    position: absolute;
-    overflow: hidden;
-    height: 0px;
-    opacity: 0;
-    z-index: -1;
-}
-
-.cont_list_select_mate {
-    position: relative;
-    float: left;
-    width: 100%;
-}
-
-.cont_select_int {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: 999;
-    overflow: hidden;
-    height: 0px;
-    width: 100%;
-    background-color: #fff;
-    padding: 0px;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    border-radius: 0px 0px 3px 3px;
-    box-shadow: 1px 4px 10px -2px rgba(0, 0, 0, 0.2);
-    transition: all 375ms ease-in-out;
-}
-.cont_select_int li {
-    position: relative;
-    float: left;
+.centerblock {
     width: 96%;
-    border-bottom: 1px solid #E0E0E0;
-    background-color: #F5F5F5;
-    list-style-type: none;
-    padding: 10px 2%;
-    margin: 0px;
-    transition: all 275ms ease-in-out;
-    display: block;
-    cursor: pointer;
+    margin-left: 2%;
+    background-color: white;
+    padding-bottom: 5%;
+    min-height: 65vh;
+}
+.centerblock .navtitle{
+    font-family: "Roboto Black";
+    font-size: 60px;
+    margin-left: 10%;
+    text-decoration: underline;
 }
 
-
-.selecionado_opcion {
-    padding:3%;
-    width: 96%;
-    display: block;
-    margin: 0px;
-    cursor: pointer;
-}
-
-.cont_select_int li:last-child {
+.text {
+    background: #fff;
+    color: #000;
+    margin: 0 auto;
+    width: 950px;
+    height: 220px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 0.5em;
+    border: 1px solid #fff;
     border-radius: 3px;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 1.3em;
+    margin-top: 2vh;
 }
-.cont_select_int li:hover {
-    background-color: #EEEEEE;
+
+ol {
+    list-style-type: upper-alpha;
 }
-.cont_select_int .active {
-    background-color: #EEEEEE;
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+.btn{
+    padding: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: white;
+    border: none;
+    border-radius: 50px;
+    color: #297ED8;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+.act {
+    padding: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background: #4d67ac;
+    border: none;
+    border-radius: 50px;
+    color: white;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.task {
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 2vh;
+    margin-bottom: 4vh;
+    font-size: 20px;
 }
 
 .task-char {
@@ -100,21 +124,78 @@
     font-weight: bold;
 }
 
-.task {
-    text-align: center;
-    font-size: 19px;
-    margin-bottom: 1vh;
-}
-.text{
-    overflow: scroll;
-    color: #000;
-    width: 835px;
-    height: 300px;
-    font-style: normal;
-    font-size: 20px;
-    line-height: 1.3em;
+.grid-wrapper-right-two-thirds {
+    display: grid;
+    grid-template-columns:
+            1fr 85%;
+    grid-gap: 20px;
+    grid-template-areas: "units right-two-thirds";
 }
 
-ol {
-    list-style-type: upper-alpha;
+#units {
+    background: rgba(128, 0, 84, 0.15);
+    max-height: 65vh;
+    margin-left: 2.5vh;
+}
+div[id^="units"] ol {
+    list-style: none;
+    counter-reset: li;
+}
+
+#units h1 {
+    color: rgb(128, 0, 84);
+}
+div[id^="units"] li {
+    /* padding-bottom: 5px; */
+    min-height: 40px;
+    /* color: white; */
+    position: relative;
+    margin-bottom: 1.5em;
+    border-left: 1px solid gray;
+    padding: 0.6em;
+    border-radius: 4px;
+}
+#units li.selected >a {
+    color: rgb(128, 0, 84) !important;
+}
+div[id^="units"] li:before {
+    position: absolute;
+    top: -0.2em;
+    left: -1em;
+    padding-left: 0.4em;
+    padding-right: 0.4em;
+    font-size: 4em;
+    font-weight: bold;
+    color: white;
+    counter-increment: li;
+    content: counter(li);
+}
+.selected {
+    font-weight: bold;
+}
+.othersa{
+    color: #625A5A;
+}
+
+div[id^="inputDiv"] input{
+    border-bottom: 1px dotted;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: transparent;
+}
+
+.button_list{
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+.unselected{
+    color: #625A5A !important;
+}
+.menu-buttons{
+    margin-top: 5.5vh;
+}
+.next-button{
+    margin-left: 0.8vh;
+    margin-bottom: 0.8vh;
 }
