--- a/css/styles2.css
+++ b/css/styles2.css
@@ -195,7 +195,7 @@ div[id^="inputDiv"] input{
 .menu-buttons{
     margin-top: 5.5vh;
 }
-.next-button{
+.menu-button{
     margin-left: 0.8vh;
     margin-bottom: 0.8vh;
 }
