--- a/css/styles2.css
+++ b/css/styles2.css
@@ -67,7 +67,7 @@ body{
     background: #fff;
     color: #000;
     margin: 0 auto;
-    width: 950px;
+    width: 100%;
     height: 220px;
     overflow-x: hidden;
     overflow-y: auto;
@@ -134,9 +134,11 @@ li {
 }
 
 #units {
+    width: 100%;
     background: rgba(128, 0, 84, 0.15);
-    max-height: 65vh;
     margin-left: 2.5vh;
+    position: relative;
+    height: fit-content;
 }
 div[id^="units"] ol {
     list-style: none;
@@ -199,4 +201,7 @@ div[id^="inputDiv"] input{
 .menu-button{
     margin-left: 0.81vh;
     margin-bottom: 0.81vh;
+}
+.post{
+    position: relative;
 }
