CSS изменения от PGKG

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -113,6 +113,7 @@ li {
 }
 
 .task {
+    text-align: center;
     margin: 0 auto;
     margin-top: 2vh;
     margin-bottom: 4vh;
@@ -201,11 +202,9 @@ div[id^="inputDiv"] input{
     margin-left: 0.81vh;
     margin-bottom: 0.81vh;
 }
-
-.blueAboutText{
-    color: #005cbf;
-
-}
 .post{
     position: relative;
+}
+.blueAboutText{
+    color: #005cbf;
 }
