--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
 .centerblock .navtitle{
     font-family: "Roboto Black";
     font-size: 60px;
-    margin-left: 25%;
+    margin-left: 5%;
     text-decoration: underline;
 }
 .centerblock .themenumber1{
@@ -153,8 +153,8 @@ body{
 }	
 .centerblock ul {
 	list-style-type: none;
-	width: 60%;
-	margin-left: 16%;
+	width: 80%;
+	margin-left: 5%;
 	font-family: "Roboto Black";
 	font-size: 50px;
 	padding-inline-start: 0px;
@@ -163,18 +163,22 @@ body{
 .centerblock li {
 	list-style-type: none;
 	font-family: "Roboto Black";
-	font-size: 40px;
+	font-size: 30px;
 	background-color: EAEAEA;
+}
+.centerblock .parttitle a {
+	text-decoration: underline;
+	color: black;
 }
 .centerblock .themetitleblock{
 	padding-top: 1.5%;
     padding-bottom: 1.5%;
 }
 .centerblock .themetitle{
-	padding-left: 24%;
+	padding-left: 2%;
 }
 .centerblock .parttitle  {
-    margin-left: 3%;
+    margin-left: 2%;
 }
 .centerblock .part  {
 	padding-top: 1.4%;
@@ -197,4 +201,8 @@ a{
 }
 @media screen and (max-width: 600px) {
     div {width: 1500px;}
+}
+.atom{
+	width: 90vw;
+	margin-top: -4%;
 }
